--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                            <i class="ri-eye-line text-xl"></i>
                         </div>
                     </a>
-                     <a href="#" class="certificate-link cert-card p-5 flex items-center space-x-4 w-full block group" data-certificate-src="src/certificates/AI for beginer.jpg">
+                     <a href="#" class="certificate-link cert-card p-5 flex items-center space-x-4 w-full block group" data-certificate-src="src/certificates/AIForBeginers.jpg">
                         <div class="bg-sky-500/10 text-sky-400 rounded-full h-12 w-12 flex items-center justify-center flex-shrink-0"><i class="ri-award-fill text-2xl"></i></div>
                         <div class="flex-grow">
                             <h3 class="font-bold text-slate-200">AI for Beginners</h3>
@@ -186,7 +186,7 @@
                            <i class="ri-eye-line text-xl"></i>
                         </div>
                     </a>
-                     <a href="#" class="certificate-link cert-card p-5 flex items-center space-x-4 w-full block group" data-certificate-src="src/certificates/Developer and Technology.jpg">
+                     <a href="#" class="certificate-link cert-card p-5 flex items-center space-x-4 w-full block group" data-certificate-src="src/certificates/DeveloperAndTechnologyJobSimulation.jpg">
                         <div class="bg-sky-500/10 text-sky-400 rounded-full h-12 w-12 flex items-center justify-center flex-shrink-0"><i class="ri-award-fill text-2xl"></i></div>
                         <div class="flex-grow">
                             <h3 class="font-bold text-slate-200">Developer and Technology Job Simulation</h3>
@@ -196,7 +196,7 @@
                            <i class="ri-eye-line text-xl"></i>
                         </div>
                     </a>
-                    <a href="#" class="certificate-link cert-card p-5 flex items-center space-x-4 w-full block group" data-certificate-src="src/certificates/Software Engineering.jpg">
+                    <a href="#" class="certificate-link cert-card p-5 flex items-center space-x-4 w-full block group" data-certificate-src="src/certificates/SoftwareEngineeringJobSimulaton.jpg">
                         <div class="bg-sky-500/10 text-sky-400 rounded-full h-12 w-12 flex items-center justify-center flex-shrink-0"><i class="ri-award-fill text-2xl"></i></div>
                         <div class="flex-grow">
                             <h3 class="font-bold text-slate-200">Software Engineering Job Simulation</h3>
@@ -206,7 +206,7 @@
                            <i class="ri-eye-line text-xl"></i>
                         </div>
                     </a>
-                    <a href="#" class="certificate-link cert-card p-5 flex items-center space-x-4 w-full block group" data-certificate-src="src/certificates/Git&GitHub.jpg">
+                    <a href="#" class="certificate-link cert-card p-5 flex items-center space-x-4 w-full block group" data-certificate-src="src/certificates/Git&Github.jpg">
                         <div class="bg-sky-500/10 text-sky-400 rounded-full h-12 w-12 flex items-center justify-center flex-shrink-0"><i class="ri-award-fill text-2xl"></i></div>
                         <div class="flex-grow">
                             <h3 class="font-bold text-slate-200">Git & GitHub Bootcamp</h3>
@@ -317,5 +317,4 @@
 </body>
 </html>
 </html>
-
 
