--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ If you're seeking a dedicated and passionate web developer, I'm eager to collabo
                     </div>
                     <!-- Project 2 -->
                     <div class="project-card overflow-hidden flex flex-col">
-                        <img src="https://placehold.co/600x400/1e293b/38bdf8?text=Project+Two" alt="Project Two Screenshot" class="w-full h-48 object-cover">
+                        <img src="src/Projects/TaskManagement.png" alt="Project Two Screenshot" class="w-full h-48 object-cover">
                         <div class="p-6 flex-grow flex flex-col">
                             <h3 class="text-xl font-bold text-slate-200 mb-2">Task Management App</h3>
                             <p class="text-slate-400 mb-4 flex-grow">A collaborative and simple task manager with real-time updates</p>
@@ -321,3 +321,4 @@ If you're seeking a dedicated and passionate web developer, I'm eager to collabo
 </body>
 </html>
 </html>
+
