--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </a>
                     </div>
                     <div class="mt-12 flex space-x-6">
-                        <a href="https://github.com/GOBU-M" target="_blank" class="text-slate-400 hover:text-sky-400 transition-colors"><i class="ri-github-fill text-3xl"></i></a>
+                        <a href="https://github.com/gobu01" target="_blank" class="text-slate-400 hover:text-sky-400 transition-colors"><i class="ri-github-fill text-3xl"></i></a>
                         <a href="https://www.linkedin.com/in/gobu-m-154b13282/" target="_blank" class="text-slate-400 hover:text-sky-400 transition-colors"><i class="ri-linkedin-box-fill text-3xl"></i></a>
                         <a href="mailto:mgobu413@gmail.com" class="text-slate-400 hover:text-sky-400 transition-colors"><i class="ri-mail-fill text-3xl"></i></a>
                     </div>
@@ -284,7 +284,7 @@ If you're seeking a dedicated and passionate web developer, I'm eager to collabo
                             </div>
                         </div>
                         <div class="mt-8 pt-8 border-t border-slate-800 flex space-x-6">
-                           <a href="https://github.com/GOBU-M" target="_blank" class="text-slate-400 hover:text-sky-400 transition-colors"><i class="ri-github-fill text-3xl"></i></a>
+                           <a href="https://github.com/gobu01" target="_blank" class="text-slate-400 hover:text-sky-400 transition-colors"><i class="ri-github-fill text-3xl"></i></a>
                            <a href="https://www.linkedin.com/in/gobu-m-154b13282/" target="_blank" class="text-slate-400 hover:text-sky-400 transition-colors"><i class="ri-linkedin-box-fill text-3xl"></i></a>
                            <a href="mailto:mgobu413@gmail.com" target="_blank" class="text-slate-400 hover:text-sky-400 transition-colors"><i class="ri-mail-fill text-3xl"></i></a>
                        </div>
@@ -321,4 +321,5 @@ If you're seeking a dedicated and passionate web developer, I'm eager to collabo
 </body>
 </html>
 </html>
+
 
